--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ yandex_site_verification :
 author:
   name             : "Aida Ramezani"
   avatar           : "photo.png"
-  bio              : "Ph.D. student  at the Departemant of Computer Science, University of Toronto"
+  bio              : "Ph.D. student  at the Departmant of Computer Science, University of Toronto"
   # location         : "University of Toronto"
   # employer         : "University of Toronto"
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
