--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   - title: "CV"
     url: /cv/
     
-- title: "Research"
-    url: /cv/
+  #- title: "Research"
+  #  url: /cv/
     
-  # - title: "Guide"
-  #   url: /markdown/
+   - title: "Guide"
+     url: /markdown/
