--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,11 @@ main:
   - title: "CV"
     url: /cv/
     
+  - title: "Guide"
+    url: /markdown/
+    
   #- title: "Research"
   #  url: /cv/
     
-   - title: "Guide"
-     url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
