--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/AidaRamezani"
+  github           : "AidaRamezani"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/aida-ramezani-6a764622b/"
+  linkedin         : "aida-ramezani-6a764622b"
   # orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
